# ffai

./: CLAUDE.md  DECODE_OPTIMIZATION_RESEARCH.md  Makefile  PROFILING_32K_DECODE.md  PROFILING_PREFILL.md  Package.swift  README.md
.github/workflows/: auto-label.yml  ci.yml  notify-docs.yml  release.yml
Sources/FFAI/: AURAQuantizedKVCache.swift  AudioModelRegistry.swift  AudioPreprocessing.swift  BufferPool.swift  Capability.swift  ChatTemplate.swift  DType.swift  Debug.swift  Device.swift  Generate.swift  GenerationParameters.swift  KVCache.swift  LanguageModel.swift  Layers.swift  LoadOptions.swift  Model.swift  ModelConfig.swift  Module.swift  Ops.swift  OpsValidation.swift  Profiling.swift  SafeTensors.swift  Tensor.swift  VLModel.swift  VisionEncoder.swift
Sources/FFAICLI/: BenchCommand.swift  ConvertCommand.swift  Dsv4BenchCommand.swift  FFAIRoot.swift  GenerateCommand.swift  InspectCommand.swift  main.swift
Sources/MetalTileSwift/: MetalTileLibrary.swift  PSOCache.swift
Tests/FFAITests/: AURACodebookTests.swift  AURARotationTests.swift  BenchTests.swift  BufferPoolTests.swift  CapabilityTests.swift  ChatTemplateTests.swift  ConvStateCacheTests.swift  DTypeTests.swift  DebugTests.swift  DeviceTests.swift  FFAITests.swift  Gemma3WeightFoldTests.swift  GenerationParametersTests.swift  GenerationStatsTests.swift  KVCacheTests.swift  LayersTests.swift  LoadOptionsTests.swift  MemoryStatsTests.swift  MiscCoverageTests.swift  ModelConfigTests.swift  ModelDownloaderTests.swift  ModelLifecycleTests.swift  ModelLocatorTests.swift  ModelRegistryTests.swift  ModuleTests.swift  NemotronLabsDiffusionTests.swift  OpsDtypeTests.swift  OpsTests.swift  OpsValidationTests.swift  OpsVisionTests.swift  PerplexityTests.swift  ProfilingTests.swift  QuantizedOpsTests.swift  SSMStateCacheTests.swift  SafeTensorsErrorTests.swift  SafeTensorsTests.swift  SamplingTests.swift  TensorTests.swift  ThinkingSplitTests.swift
Tests/Helpers/: CommonTestHelpers.swift
Tests/MetalTileSwiftTests/: KernelManifestSmokeTests.swift  MetalTileSwiftTests.swift  PSOCacheTests.swift  VectorAddTests.swift
Tests/ModelIntegrationTests/: Quantized2bitIntegrationTests.swift
Tests/ModelTests/: DeterminismSmokeTests.swift  Gemma4DebugTests.swift  Gemma4IntegrationTests.swift  GoldenFixture.swift  KVCacheSchemeIntegrationTests.swift  LlamaIntegrationTests.swift  Mamba2IntegrationTests.swift  Quantized3and6bitIntegrationTests.swift  Quantized3bitIntegrationTests.swift  Quantized4bitDiagnostic.swift  Quantized4bitIntegrationTests.swift  Quantized5bitIntegrationTests.swift  Quantized6bitIntegrationTests.swift  Quantized8bitIntegrationTests.swift  Qwen36SmokeTests.swift  Qwen3IntegrationTests.swift  SenseVoiceIntegrationTests.swift
Tools/: capture-fixtures.py
benchmarks/: .m5-max-2026-05-27.state.json  m5-max-2026-05-27.md
dev/moe_mma/: kernel.metal  kernel_fused.metal  kernel_nax_q2k.metal  (+6 more)
docs/: BACKENDS.md  DSV4_PORT.md  PERF.md  VERIFICATION.md
documentation/: README.md  architecture.md  benchmarking.md  capabilities.md  chat-templates.md  generation-parameters.md  installation.md  kv-cache.md  models.md  observability.md  performance.md  quantization.md  quickstart.md  streaming.md  using-the-cli.md
papers/: gemma3-coherence-investigation-2026-05-19.md  post-mortem-2026-05-19-dispatch-shape-gpu-freeze.md
planning/: architecture.md  metaltile-reconciliation-plan-2026-05-21.md  plan.md  roadmap.md
rust/: .gitignore  Cargo.toml  README.md
rust/crates/backends/ffai-cuda/: Cargo.toml
rust/crates/backends/ffai-cuda/src/: imp.rs  lib.rs
rust/crates/backends/ffai-cuda/tests/: all_models.rs  conv1d_test.rs  cuda_smoke.rs  dsv4_layer.rs  dsv4_mla.rs  dsv4_moe.rs  dsv4_test.rs  falcon_h1.rs  ffai_model.rs  gather_prof.rs  gemma2.rs  gemv_q4_prof.rs  gemv_q8.rs  gemv_q8_bench.rs  gpt2.rs  gpt2_generate.rs  gpt2_kvcache.rs  gpt2_prefill.rs  gptneo.rs  graph_bench.rs  grouped_bcast_test.rs  hf_model.rs  llama_prefill.rs  mamba2.rs  mamba_bench.rs  moe_test.rs  nemotron.rs  olmo2.rs  olmoe.rs  phi.rs  pythia.rs  qwen3_real.rs  qwen_moe.rs  raw_gemv.rs  sdpa_tc_bench.rs  sdpa_tc_test.rs  siglip.rs  smolvlm.rs  ssd_scan_test.rs  ssm_test.rs  (+4 more)
rust/crates/backends/ffai-metal/: Cargo.toml
rust/crates/backends/ffai-metal/src/: lib.rs
rust/crates/backends/ffai-metal/tests/: all_models.rs  conv1d_test.rs  dequant_q4_oob.rs  dispatch_bench.rs  dsv4_layer.rs  dsv4_mla.rs  dsv4_moe.rs  dsv4_test.rs  falcon_h1.rs  gemma2.rs  gemv_q8.rs  gguf_regression_metal.rs  gpt2.rs  gpt2_generate.rs  gpt2_kvcache.rs  gpt2_prefill.rs  gptneo.rs  hf_model.rs  llama_prefill.rs  mamba2.rs  metal_model.rs  moe_test.rs  nemotron.rs  olmo2.rs  olmoe.rs  phi.rs  phi3_gguf_metal.rs  pythia.rs  qwen25_gguf_metal.rs  qwen3_metal.rs  qwen_moe.rs  siglip.rs  smolvlm.rs  ssd_profile.rs  ssm_test.rs  stablelm2.rs  subslab_oob.rs  vit_ops.rs  whisper.rs  whisper_base.rs
rust/crates/backends/ffai-vulkan/: Cargo.toml
rust/crates/backends/ffai-vulkan/src/: imp.rs  lib.rs
rust/crates/backends/ffai-vulkan/tests/: qwen25_first_logit_diag.rs  qwen25_gguf_vulkan.rs  qwen25_prefill_coopmat.rs  vulkan_smoke.rs
rust/crates/ffai/: Cargo.toml
rust/crates/ffai-cli/: Cargo.toml
rust/crates/ffai-cli/src/: main.rs
rust/crates/ffai-core/: Cargo.toml
rust/crates/ffai-core/src/: error.rs  lib.rs
rust/crates/ffai-ffi/: Cargo.toml
rust/crates/ffai-ffi/include/: ffai.h
rust/crates/ffai-ffi/src/: lib.rs
rust/crates/ffai-loader/: Cargo.toml
rust/crates/ffai-loader/src/: gguf.rs  iq2xxs_tables.rs  lib.rs
rust/crates/ffai-loader/tests/: gguf_test.rs  mlx_dequant_test.rs  probe_test.rs
rust/crates/ffai-models/: Cargo.toml
rust/crates/ffai-models/src/: dsv4.rs  gguf_tokenizer.rs  lib.rs  llama.rs  moe.rs
rust/crates/ffai-modeltests/: Cargo.toml
rust/crates/ffai-modeltests/src/: lib.rs
rust/crates/ffai-ops/: Cargo.toml
rust/crates/ffai-ops/src/: lib.rs  ssd_scan.rs  ssd_scan_portable.rs
rust/crates/ffai-runtime/: Cargo.toml
rust/crates/ffai-runtime/src/: lib.rs
rust/crates/ffai/src/: lib.rs
scripts/: release.sh  setup-dev.sh
(+105 files in other folders)
