[package]
name = "ffai-loader"
description = "FFAI weight loaders: GGUF / SafeTensors / HF. Pure byte work, backend-neutral."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ffai-core.workspace = true
serde_json.workspace = true
memmap2.workspace = true
