[package]
name = "ffai-models"
description = "FFAI model definitions (forward passes) as backend-neutral Rust. Ported from FFAI-Swift Models/, validated against it as the oracle."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ffai-core.workspace = true
ffai-ops.workspace = true
ffai-loader.workspace = true
serde_json.workspace = true
