[package]
name = "ffai-ops"
description = "FFAI semantic ops — the seam between model code and metaltile kernels. Builds/looks up a Kernel and dispatches it via the Device trait."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustc-hash.workspace = true
parking_lot.workspace = true
ffai-core.workspace = true
metaltile-core.workspace = true
# the kernel registry (all_kernels) + the crate that registers the model
# kernels (must be linked so `inventory` collects mt_rms_norm/mt_gemv/…).
metaltile-codegen.workspace = true
metaltile-std.workspace = true
