[package]
name = "ffai-cuda"
description = "FFAI CUDA backend — wraps metaltile-runtime's CudaDevice (NVRTC -> PTX -> driver) behind the ffai-core Device trait."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ffai-core.workspace = true
metaltile-core.workspace = true
metaltile-codegen = { workspace = true, optional = true }
metaltile-runtime = { workspace = true, optional = true }

[dev-dependencies]
ffai-core.workspace = true
ffai-ops.workspace = true
ffai-models.workspace = true
ffai-loader.workspace = true
metaltile-core.workspace = true

[features]
# Off by default so macOS / non-CUDA hosts build the crate as a stub.
# `--features cuda` pulls metaltile-runtime's real CUDA device.
cuda = ["dep:metaltile-runtime", "dep:metaltile-codegen", "metaltile-runtime/cuda"]

[[test]]
name = "cuda_smoke"
required-features = ["cuda"]

[[test]]
name = "ffai_model"
required-features = ["cuda"]

[[test]]
name = "qwen3_real"
required-features = ["cuda"]

[[test]]
name = "hf_model"
required-features = ["cuda"]

[[test]]
name = "moe_test"
required-features = ["cuda"]

[[test]]
name = "dsv4_test"
required-features = ["cuda"]

[[test]]
name = "dsv4_mla"
required-features = ["cuda"]

[[test]]
name = "dsv4_moe"
required-features = ["cuda"]

[[test]]
name = "dsv4_layer"
required-features = ["cuda"]

[[test]]
name = "qwen_moe"
required-features = ["cuda"]

[[test]]
name = "ssm_test"
required-features = ["cuda"]

[[test]]
name = "conv1d_test"
required-features = ["cuda"]

[[test]]
name = "mamba2"
required-features = ["cuda"]

[[test]]
name = "olmoe"
required-features = ["cuda"]

[[test]]
name = "vit_ops"
required-features = ["cuda"]

[[test]]
name = "siglip"
required-features = ["cuda"]

[[test]]
name = "whisper"
required-features = ["cuda"]

[[test]]
name = "gpt2"
required-features = ["cuda"]

[[test]]
name = "pythia"
required-features = ["cuda"]

[[test]]
name = "gemma2"
required-features = ["cuda"]

[[test]]
name = "phi"
required-features = ["cuda"]

[[test]]
name = "falcon_h1"
required-features = ["cuda"]

[[test]]
name = "whisper_base"
required-features = ["cuda"]

[[test]]
name = "smolvlm"
required-features = ["cuda"]

[[test]]
name = "gpt2_prefill"
required-features = ["cuda"]

[[test]]
name = "llama_prefill"
required-features = ["cuda"]

[[test]]
name = "gpt2_generate"
required-features = ["cuda"]
