[package]
name = "ffai-metal"
description = "FFAI Metal backend (Rust, via metal-rs). For running the Rust engine on Apple hardware / cross-validating against Swift FFAI. The Swift path remains the primary iPhone/Apple engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ffai-core.workspace = true
# TODO: metal-rs for the real impl, Apple-only.
# [target.'cfg(target_os = "macos")'.dependencies]
# metal = "0.29"
