[package]
name = "ffai-metal"
description = "FFAI Metal backend — wraps metaltile-runtime's Context (MSL JIT + dispatch) behind the ffai-core Device trait. Runs the shared Rust models on Apple GPUs (incl. iOS)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
parking_lot.workspace = true
ffai-core.workspace = true
# metaltile-runtime's Context is the public Metal dispatch face. Builds on
# every platform (Metal code is target_os=macos-gated inside; has_gpu()=false
# elsewhere), so no feature gating needed here.
metaltile-runtime.workspace = true
metaltile-core.workspace = true

[dev-dependencies]
ffai-modeltests.workspace = true
ffai-ops.workspace = true
ffai-models.workspace = true
ffai-loader.workspace = true
